@@ -1,3 +1,15 @@
+2010-02-27 23:32-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Headers/Additions/GNUstepGUI/GSTheme.h: Add category to allow
+	overriding of classes used for save/open panels.
+	* Source/GNUmakefile: Build new category.
+	* Source/GSThemeOpenSavePanels.m: Implementation of methods
+	-savePanelClass and -openPanelClass.
+	* Source/NSOpenPanel.m: Modifications to use class from current 
+	theme.
+	* Source/NSSavePanel.m: Modifications to use class from current 
+	theme.
+
 2010-02-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Tools/GSspell.m (-createBundleAtPath:languages:,
